# rag_learning

./: 1-AgenticRAG.ipynb  8-multiagent.ipynb  chromadb.ipynb  embedding.ipynb  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb
0-DataIngestParsing/data/text_files/: machine_learning.txt  python_intro.txt
